fix(kui-495): refactor models and swagger
